--- a/Starwars/css/style.css
+++ b/Starwars/css/style.css
@@ -13,7 +13,9 @@ font-family: 'ProximaNova-Black';
 }
 
 body {
-	background: #070506 url('../img/main-bg.png');
+	background: #070506 url('../img/main-bg.png') top right 90% no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
 	color: #fff;
 	font-family: "Roboto", sans-serif;
 }
@@ -95,6 +97,8 @@ body {
 	padding-right: 80px;
 	outline: none;
 	cursor: pointer;
+	text-decoration: none;
+	display: inline-block;
 }
 
 .button-play:after {
@@ -119,3 +123,76 @@ body {
 	right: -8px;
 	top: -8px;
 }
+
+.episodes {
+	padding: 60px 0
+}
+
+.episodes__title {
+	font-size: 18px;
+	line-height: 150%;
+	margin-bottom: 24px;
+}
+
+.slider {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.slider__item {
+	position: relative;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 250px;
+	min-height: 200px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	padding: 30px;
+	/*background: linear-gradient(0deg, rgba(80, 80, 80, 0.86), rgba(80, 80, 80, 0.86)), url(star_wars_phantom_menace_poster.jpg);*/
+	box-shadow: 0px 10px 26px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	transition: background .2s;
+	cursor: pointer;
+}
+
+.slider__item:before {
+	content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	background: rgba(80, 80, 80, 0.86);
+	transition: all .2s;
+}
+
+.slider__image {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: -2;
+}
+
+.slider__item:hover:before {
+	background: linear-gradient(
+		0deg, rgba(64, 101, 255, 0.86), 
+		rgba(64, 101, 255, 0.86)), 
+	    url(dlpyYDt4F1MkVfUDGm1SjIkkbhy.jpg);
+}
+/*
+.episode-1 {
+	background: url('../img/Rectangle_1.png') center / cover;
+}
+.episode-2 {
+	background: url('../img/Rectangle_2.png') center / cover;
+}
+.episode-3 {
+	background: url('../img/Rectangle_3.png') center / cover;
+}
+.episode-4 {
+	background: url('../img/Rectangle_4.png') center / cover;
+}*/
